.container alignment fixes
arrows and p tags

--- a/css/main.css
+++ b/css/main.css
@@ -211,6 +211,7 @@ div.gallery{
     object-fit:cover;
     height:300px;
 }
+div.container div p{margin-bottom:0;}
 
 button{
     position:absolute;
@@ -233,13 +234,13 @@ button:hover{
     text-shadow:-1px 0 black, 0 1px black, 1px 0 black, 0 -1px black
 }
 .next{
-    top:34px;
+    top:24px;
     right:0px;
     height:inherit;
 
 }
 .previous{
-    top:34px;
+    top:24px;
     left:0px;
     height:inherit;
 }
